--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@emotion/styled": "^11.13.5",
     "@heroicons/react": "^2.1.4",
     "@mui/material": "^6.1.10",
-    "@mui/x-charts": "^7.23.0",
     "@mui/material-nextjs": "^6.1.9",
+    "@mui/x-charts": "^7.23.0",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
-    "next": "^15.0.0",
+    "next": "15.0.4-canary.45",
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-cd22717c-20241013",
