--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-charts": "^7.23.0",
     "@tailwindcss/forms": "^0.5.7",
     "@vercel/postgres": "^0.8.0",
+    "apexcharts": "^4.2.0",
     "autoprefixer": "10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
@@ -22,6 +23,7 @@
     "next-auth": "5.0.0-beta.19",
     "postcss": "8.4.38",
     "react": "19.0.0-rc-cd22717c-20241013",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.0.0-rc-cd22717c-20241013",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2",
